src/sass/_theme.scss
body {
    width: 100%;
    height: 100%;
    font-family: $fontserif;
    color: $darkgreytext;
    background-color: #fff;
}

html {
    width: 100%;
    height: 100%;
}

h1, .h1,
h2, .h2
h3, .h3,
h4, .h4,
h5, .h5,
h6, .h6 {
    margin: 0 0 35px;
    text-transform: uppercase;
    font-family: $fontsans;
    font-weight: 700;
    letter-spacing: 1px;
}

p {
    margin: 0 0 25px;
    font-size: 18px;
    line-height: 1.5;
}
.has-error {
    .form-control {
        border-color: darken($errortext,8);
    }
    .with-errors {
        font-family: $fontsans;
        text-transform: uppercase;
        font-weight: 700;
        color:lighten($lightgreentext,5);

    }
}

.form-control:focus {
    border-color: $lightgreentext;
}

@media(min-width:767px) {
    p {
        margin: 0 0 35px;
        font-size: 20px;
        line-height: 1.6;
    }
}

a {
    color: #28c3ab;
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
}

a:hover,
a:focus {
    text-decoration: none;
    color: #176e61;
}

.light {
    font-weight: 400;
}

.navbar {
    margin-bottom: 0;
    border-bottom: 1px solid rgba(255,255,255,.3);
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    background-color: #000;
}

.navbar-brand {
    font-weight: 700;
}

.navbar-brand:focus {
    outline: 0;
}

.navbar-custom a {
    color: #fff;
}

.navbar-custom .nav li a {
    -webkit-transition: background .3s ease-in-out;
    -moz-transition: background .3s ease-in-out;
    transition: background .3s ease-in-out;
}

.navbar-custom .nav li a:hover,
.navbar-custom .nav li a:focus,
.navbar-custom .nav li.active {
    outline: 0;
    background-color: rgba(255,255,255,.2);
}

.navbar-toggle {
    padding: 4px 6px;
    font-size: 16px;
    color: #fff;
}

.navbar-toggle:focus,
.navbar-toggle:active {
    outline: 0;
}

@media(min-width:767px) {
    .navbar {
        padding: 20px 0;
        border-bottom: 0;
        letter-spacing: 1px;
        background: 0 0;
        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
        transition: background .5s ease-in-out,padding .5s ease-in-out;
    }

    .top-nav-collapse {
        padding: 0;
        background-color: #000;
    }

    .navbar-custom.top-nav-collapse {
        border-bottom: 1px solid rgba(255,255,255,.3);
    }
}

.intro {
    display: table;
    width: 100%;
    height: 100%;
    padding: 100px 0;
    text-align: center;
    color: #fff;
    // background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
    // background-color: #000;
    // -webkit-background-size: cover;
    // -moz-background-size: cover;
    // background-size: cover;
    // -o-background-size: cover;

    video#bgvid{
        position: absolute; right: 0; bottom: 0;
        min-width: 100%; min-height: 100%;
        width: auto; height: auto; z-index: -100;
        background: url(/assets/img/bgclip.jpg) no-repeat;
        background-size: cover;
    }
}


.intro-body {
    display: table-cell;
    vertical-align: middle;
}

.brand-heading {
    font-size: 34px;
}

.intro-text {
    font-size: 18px;
}

@media(min-width:767px) {
    .intro {
        height: 100%;
        padding: 0;
    }

    .brand-heading {
        font-size: 80px;
    }

    .intro-text {
        font-size: 25px;
    }
}

@media(min-width:1199px) {
    .brand-heading {
        font-size: 100px;
    }
}

.btn-circle {
    width: 70px;
    height: 70px;
    margin-top: 15px;
    padding: 7px 16px;
    border: 2px solid #fff;
    border-radius: 35px;
    font-size: 40px;
    color: #fff;
    background: 0 0;
    -webkit-transition: background .3s ease-in-out;
    -moz-transition: background .3s ease-in-out;
    transition: background .3s ease-in-out;
}

.btn-circle:hover,
.btn-circle:focus {
    outline: 0;
    color: #fff;
    background: rgba(255,255,255,.1);
}

.btn-circle-small {
    @extend .btn-circle;
    width: 40px;
    height:40px;
    padding: 1px 5px;
    border-color: $darkgreytext;
    font-size: 24px;

}

.btn-circle-small:hover, btn-circle-dark:hover,
.btn-circle-dark:focus, .btn-circle-small:focus {
    color:$lightgreentext;
}

.btn-circle-dark {
    color: $darkgreytext;

}

btn-circle-dark:hover,
.btn-circle-dark:focus {
    @extend .btn-circle:hover;
    color:$lightgreentext;
}

.page-scroll .btn-circle i.animated {
    -webkit-transition-property: -webkit-transform;
    -webkit-transition-duration: 1s;
    -moz-transition-property: -moz-transform;
    -moz-transition-duration: 1s;
}

.page-scroll .btn-circle:hover i.animated {
    -webkit-animation-name: pulse;
    -moz-animation-name: pulse;
    -webkit-animation-duration: 1.5s;
    -moz-animation-duration: 1.5s;
    -webkit-animation-iteration-count: infinite;
    -moz-animation-iteration-count: infinite;
    -webkit-animation-timing-function: linear;
    -moz-animation-timing-function: linear;
}

@-webkit-keyframes pulse {
    0 {
        -webkit-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -webkit-transform: scale(1.2);
        transform: scale(1.2);
    }

    100% {
        -webkit-transform: scale(1);
        transform: scale(1);
    }
}

@-moz-keyframes pulse {
    0 {
        -moz-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -moz-transform: scale(1.2);
        transform: scale(1.2);
    }

    100% {
        -moz-transform: scale(1);
        transform: scale(1);
    }
}

.content-section {
    padding-top: 100px;

    .breadcrumb {
        padding:0;
        border-radius: 0;
        background-color: transparent;
        font-size: 12px;
        font-weight: 100;

    }
}

.download-section {
    width: 100%;
    padding: 50px 0;
    color: #fff;
    background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
    background-color: #000;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

#map {
    width: 100%;
    height: 200px;
    margin-top: 100px;
}

.contact-form {
    background-color: darken($lightgreentext, 10);
    color: #ffffff;
    margin-bottom: 0;
    padding-top: 80px;
    padding-bottom: 80px;
    margin-top: 150px;

    input, textarea, select {
        border:4px solid #bbbbbb;
        border-radius: 0;
    }

    // label {
    //     display:none;
    // }
}
.copyright {
    color:$lightgreytext;
    font-family: $fontsans;
    font-weight: 100;
    text-transform: uppercase;
    background-color: lighten($darkgreytext,10);
    margin-bottom: 0;
    padding-top: 40px;
}

@media(min-width:767px) {
    .content-section {
        padding-top: 150px;
    }

    .download-section {
        padding: 100px 0;
    }

    #map {
        height: 400px;
        margin-top: 250px;
    }
}

.btn {
    text-transform: uppercase;
    font-family: $fontsans;
    font-weight: 400;
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}

.btn-default {
    border: 1px solid #28c3ab;
    color: #28c3ab;
    background-color: transparent;
}

.btn-default:hover,
.btn-default:focus {
    border: 1px solid #28c3ab;
    outline: 0;
    color: #000;
    background-color: #28c3ab;
}

.btn-huge {
    padding: 25px;
    font-size: 26px;
}

.banner-social-buttons {
    margin-top: 0;
}

@media(max-width:1199px) {
    ul.banner-social-buttons {
        margin-top: 15px;
    }
}

@media(max-width:767px) {
    ul.banner-social-buttons>li {
        margin-bottom: 20px;
        padding: 0;
    }

    ul.banner-social-buttons>li:last-child {
        margin-bottom: 0;
    }
}
// text Selection settings
::-moz-selection {
    text-shadow: none;
    background:$lightgreentext;
    background:lighten($lightgreentext, 35%);
}

::selection {
    text-shadow: none;
    background:$lightgreentext;
    background: lighten($lightgreentext, 35%);
}

img::selection {
    background: 0 0;
}

img::-moz-selection {
    background: 0 0;
}

body {
    webkit-tap-highlight-color: rgba(255,255,255,.2);
}

.hide-transition {
    opacity:0;
    @include transition-property(opacity);
    @include transition-duration(3s);
}

